// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test's on GifExpertApp component Should show a list of categories 1`] = `
<Fragment>
  <h2>
     GifExpertApp XD 
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Naruto"
      key="Naruto"
    />
    <GifGrid
      category="Ichigo"
      key="Ichigo"
    />
    <GifGrid
      category="Luffy"
      key="Luffy"
    />
  </ol>
</Fragment>
`;

exports[`Test's on GifExpertApp component Should show the component 1`] = `
<Fragment>
  <h2>
     GifExpertApp XD 
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
